<resources>
    <string name="app_name">Xing Chuan Solutions</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="label_media">Media</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_appointments">Appointments</string>
    <string name="label_scanner">Scanner</string>
    <string name="label_products">Products</string>
    <string name="label_likes">likes</string>
    <string name="label_sales_order">Sales Order</string>
    <string name="label_calculator">Calculator</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_settings">Settings</string>
    <string name="xc_logo_description">XC_logo</string>
    <string name="label_leaderboard">Leaderboard</string>
    <string name="label_incentive">Incentive</string>
    <string name="label_rv">RV</string>
    <string name="label_number_of_duration">Duration (Months)</string>
    <string name="label_deposit_amount">Deposit Amount</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_calculate">Calculate</string>
    <string name="label_monthly_installment">Monthly Installment</string>
</resources>
