<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/label_profile"/>
    <item
        android:id="@+id/menu_media"
        android:icon="@drawable/ic_media"
        android:title="@string/label_media"/>
    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/label_contacts"/>
    <item
        android:id="@+id/menu_appointments"
        android:icon="@drawable/ic_appointments"
        android:title="@string/label_appointments"/>
    <item
        android:id="@+id/menu_scanner"
        android:icon="@drawable/ic_scanner"
        android:title="@string/label_scanner"/>
    <item
        android:id="@+id/menu_products"
        android:icon="@drawable/ic_products"
        android:title="@string/label_products"/>
    <item
        android:id="@+id/menu_likes"
        android:icon="@drawable/ic_likes"
        android:title="@string/label_likes"/>
    <item
        android:id="@+id/menu_sales_order"
        android:icon="@drawable/ic_sales_orders"
        android:title="@string/label_sales_order"/>
    <item
        android:id="@+id/menu_calculator"
        android:icon="@drawable/ic_calculator"
        android:title="@string/label_calculator"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/label_settings"/>
</menu>