<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homefragments.fragment_home">

    <RelativeLayout
        android:padding="5dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/xc_logo_description"
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:src="@drawable/xing_chuan_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/logo"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/ll_home_appointments"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center" >
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@color/white">
                    <ImageView
                        android:background="@drawable/home_circle_image"
                        android:contentDescription="@string/label_appointments"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_appointments"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_appointments"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_products"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center" >

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@color/white">

                    <ImageView
                        android:background="@drawable/home_circle_image"
                        android:contentDescription="@string/label_products"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_products"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_products"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_leaderboard"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/red"
                android:gravity="center" >
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@color/white">

                    <ImageView
                        android:background="@drawable/home_circle_image"
                        android:contentDescription="@string/label_leaderboard"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_appointments"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_leaderboard"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>