<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".content.ActivityLeaderboard">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_crop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_leaderboard"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_tab"
        android:layout_below="@id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/leaderboard_tab_main"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_leaderboard_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_profile" />

        <Button
            android:id="@+id/btn_leaderboard_incentives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_incentive" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_leaderboard_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_tab"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/ll_leaderboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_incentive_view"
        android:layout_below="@id/ll_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_month"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/tv_user_sale"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>